content/terraform-plugin-framework/v0.12.x/docs/plugin/framework/migrating/attributes-blocks/fields.mdx
---
page_title: 'Attribute Fields: Migrating from SDKv2 to the Framework'
description: >-
  Migrate attribute required, optional, computed, and sensitive fields from SDKv2 to the plugin Framework
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-03-06T10:49:53-05:00
last_modified: 2025-03-14T14:39:20-05:00
# END AUTO GENERATED METADATA
---

# Attribute Fields

A subset of attribute fields, such as required, optional, computed, or sensitive, define attribute behavior as boolean flags. Refer to
[Schemas - Attributes](/terraform/plugin/framework/schemas#required) in the Framework documentation for details.

This page explains how to migrate the required, optional, computed, and sensitive attribute fields from SDKv2 to the
Framework.

## SDKv2

In SDKv2, `Required`, `Optional`, `Computed`, and `Sensitive` are boolean fields on the attribute's schema.

```go
func resourceExample() *schema.Resource {
    return &schema.Resource{
         /* ... */
        Schema: map[string]*schema.Schema{
            "attribute_example": {
                Required:    bool
                Optional:    bool
                Computed:    bool
                Sensitive:   bool
                /* ... */
```

## Framework

In the Framework, you set the same fields on the `tfsdk.Attribute` struct, with the same behavior.

```go
func (d *resourceTypeExample) GetSchema(context.Context) (tfsdk.Schema, diag.Diagnostics) {
    return tfsdk.Schema{
        /* ... */
        Attributes: map[string]tfsdk.Attribute{
            "attribute_example": {
                Required:   bool
                Optional:   bool
                Computed:   bool
                Sensitive:  bool
                /* ... */
```

## Example

The following examples show how to migrate portions of the [http](https://github.com/hashicorp/terraform-provider-http)
provider.

For a complete example, clone the
`terraform-provider-http` repository and compare the `data_source.go` file in
[v2.2.0](https://github.com/hashicorp/terraform-provider-http/blob/v2.2.0/internal/provider/data_source.go)
and the `data_source_http.go` file in
[v3.0.1](https://github.com/hashicorp/terraform-provider-http/blob/v3.0.1/internal/provider/data_source_http.go).

### SDKv2

The following example from the `data_source.go` file shows how the `url` attribute on the `http` data source is set to
be required with SDKv2.

```go
func dataSource() *schema.Resource {
    return &schema.Resource{
        Schema: map[string]*schema.Schema{
            "url": {
                Required:   true,
                /* ... */
            },
            /* ... */
```

### Framework

The following example from the `data_source_http.go` file shows how the `url` attribute on the `http` data source is set
to be required with the Framework.

```go
func (d *httpDataSourceType) GetSchema(context.Context) (tfsdk.Schema, diag.Diagnostics) {
    return tfsdk.Schema{
        Attributes: map[string]tfsdk.Attribute{
            "url": {
                Required:   true,
                /* ... */
            },
            /* ... */
```
